module 09: adjustments ex00, ex01 (please work)

--- a/module_09/ex00.md
+++ b/module_09/ex00.md
@@ -2,6 +2,8 @@
 -   [x] Your program must take a file as argument.
 -   [x] Each line in this file must use the following format: "date | value".
 -   [x] A valid date will always be in the following format: Year-Month-Day.
+    -   [x] Consider leap years.
+    -   [x] Consider end of the month (31) and 32.
 -   [x] A valid value must be either a float or a positive integer, between 0 and 1000.
 -   [x] You must use at least one container in your code to validate this exercise.
 -   [x] You should handle possible errors with an appropriate error message.
