module 09: ex02 i hate you

--- a/module_09/ex02.md
+++ b/module_09/ex02.md
@@ -2,6 +2,7 @@
 -   [x] Your program must be able to use a positive integer sequence as argument.
 -   [x] Your program must use the merge-insert sort algorithm to sort the positive integer sequence
 -   [x] You need to use the Ford-Johnson algorithm. (a close one)
+    -   [ ] Close one is not enough at least at jacobsthal numbers
 -   [x] If an error occurs during program execution, an error message should be displayed on the standard output.
 -   [x] You must use at least two different containers
 -   [x] Your program must be able to handle at least 3000 different integers
